add form save tenant

--- a/src/pages/add-property.html
+++ b/src/pages/add-property.html
@@ -217,6 +217,7 @@
 
                 if (response.ok) {
                     alert('Imóvel salvo com sucesso!');
+                    window.history.back();
                 } else {
                     alert('Erro ao salvar o imóvel!');
                 }
