--- a/src/pages/add-tenant.html
+++ b/src/pages/add-tenant.html
@@ -42,7 +42,6 @@
         select,
         textarea {
             width: 90%;
-            /* Reduzido em 10% */
             padding: 12px;
             margin-bottom: 15px;
             border: 2px solid #ccc;
@@ -81,11 +80,6 @@
             align-items: stretch;
         }
 
-        .section-title {
-            color: #007bff;
-            text-align: center;
-        }
-
         .toggle-button {
             background-color: #f0f0f0;
             border: 1px solid #ccc;
@@ -112,16 +106,13 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 0.9em;
-            /* Fonte menor */
             margin: 0 auto;
         }
 
         .add-button img {
             margin-right: 5px;
             width: 16px;
-            /* Ícone ajustado */
             height: 16px;
-            /* Ícone ajustado */
         }
 
         .add-button:hover {
@@ -138,16 +129,13 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 0.9em;
-            /* Fonte menor */
             margin: 20px auto;
         }
 
         .submit-button img {
             margin-right: 5px;
             width: 16px;
-            /* Ícone ajustado */
             height: 16px;
-            /* Ícone ajustado */
         }
 
         .submit-button:hover {
@@ -236,11 +224,26 @@
     </div>
 
     <script>
+        async function fetchAddress(cep, prefix) {
+            try {
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+                if (!response.ok) throw new Error('CEP não encontrado');
+                const data = await response.json();
+                document.getElementById(`${prefix}Street`).value = data.logradouro || '';
+                document.getElementById(`${prefix}Neighborhood`).value = data.bairro || '';
+                document.getElementById(`${prefix}City`).value = data.localidade || '';
+                document.getElementById(`${prefix}State`).value = data.uf || '';
+            } catch (error) {
+                alert('Erro ao buscar endereço: ' + error.message);
+            }
+        }
+
         function renderAddressFields(containerId, prefix) {
             const container = document.getElementById(containerId);
             container.innerHTML = `
             <label for="${prefix}PostalCode">CEP</label>
-            <input type="text" id="${prefix}PostalCode" placeholder="XXXXX-XXX" maxlength="10" required>
+            <input type="text" id="${prefix}PostalCode" placeholder="XXXXX-XXX" maxlength="10" required
+                onchange="fetchAddress(this.value, '${prefix}')">
 
             <label for="${prefix}Street">Rua</label>
             <input type="text" id="${prefix}Street" placeholder="Rua" required>
@@ -258,59 +261,25 @@
             <input type="text" id="${prefix}City" placeholder="Cidade" required>
 
             <label for="${prefix}State">Estado</label>
-            <select id="${prefix}State" required>
-                <option value="" disabled selected>Selecione o Estado</option>
-                <option value="AC">AC</option>
-                <option value="AL">AL</option>
-                <option value="AP">AP</option>
-                <option value="AM">AM</option>
-                <option value="BA">BA</option>
-                <option value="CE">CE</option>
-                <option value="DF">DF</option>
-                <option value="ES">ES</option>
-                <option value="GO">GO</option>
-                <option value="MA">MA</option>
-                <option value="MT">MT</option>
-                <option value="MS">MS</option>
-                <option value="MG">MG</option>
-                <option value="PA">PA</option>
-                <option value="PB">PB</option>
-                <option value="PR">PR</option>
-                <option value="PE">PE</option>
-                <option value="PI">PI</option>
-                <option value="RJ">RJ</option>
-                <option value="RN">RN</option>
-                <option value="RS">RS</option>
-                <option value="RO">RO</option>
-                <option value="RR">RR</option>
-                <option value="SC">SC</option>
-                <option value="SP">SP</option>
-                <option value="SE">SE</option>
-                <option value="TO">TO</option>
-            </select>
-
-            <label for="${prefix}Country">País</label>
-            <input type="text" id="${prefix}Country" placeholder="País" required>
-        `;
+            <input type="text" id="${prefix}State" placeholder="Estado" required>
+            `;
         }
 
-        // Renderizando os campos no carregamento da página
         renderAddressFields('personalAddress', 'personal');
         renderAddressFields('companyAddress', 'company');
-
 
         function addGoodsField() {
             const goodsList = document.getElementById('goodsList');
             const div = document.createElement('div');
             div.classList.add('item');
             div.innerHTML = `
-                <label for="goodsType">Tipo do Bem</label>
-                <input type="text" name="goodsType" placeholder="Descrição do bem" required>
+                <label for="goodsDescription">Descrição</label>
+                <input type="text" name="goodsDescription" placeholder="Descrição do bem" required>
 
                 <label for="goodsValue">Valor</label>
                 <input type="number" name="goodsValue" placeholder="Valor do bem" required>
 
-                <button type="add-button" onclick="removeField(this)">Remover</button>
+                <button type="button" class="toggle-button" onclick="this.parentNode.remove()">Remover</button>
             `;
             goodsList.appendChild(div);
         }
@@ -324,92 +293,19 @@
                 <input type="text" name="referenceName" placeholder="Nome da referência" required>
 
                 <label for="referencePhone">Telefone</label>
-                <input type="tel" name="referencePhone" placeholder="Telefone da referência" required>
+                <input type="text" name="referencePhone" placeholder="Telefone da referência" required>
 
-                <label for="relationship">Relacionamento</label>
-                <input type="text" name="relationship" placeholder="Relacionamento" required>
-
-                <button type="add-button" onclick="removeField(this)">Remover</button>
+                <button type="button" class="toggle-button" onclick="this.parentNode.remove()">Remover</button>
             `;
             referencesList.appendChild(div);
         }
 
-        function removeField(button) {
-            button.parentElement.remove();
-        }
-
-        async function submitForm() {
-            const tenantData = {
-                person: {
-                    name: document.getElementById('name').value,
-                    cpf: document.getElementById('cpf').value,
-                    birthDate: document.getElementById('birthDate').value,
-                    email: document.getElementById('email').value,
-                    phone: document.getElementById('phone').value,
-                    naturalness: document.getElementById('naturalness').value,
-                    nationality: document.getElementById('nationality').value
-                },
-                address: {
-                    street: document.getElementById('personalStreet').value,
-                    number: document.getElementById('personalNumber').value,
-                    complement: document.getElementById('personalComplement').value || null,
-                    neighborhood: document.getElementById('personalNeighborhood').value,
-                    city: document.getElementById('personalCity').value,
-                    state: document.getElementById('personalState').value,
-                    country: document.getElementById('personalCountry').value,
-                    postalCode: document.getElementById('personalPostalCode').value,
-                },
-                occupation: {
-                    typeOccupation: document.getElementById('typeOccupation').value,
-                    companyName: document.getElementById('companyName').value,
-                    position: document.getElementById('position').value,
-                    salary: parseFloat(document.getElementById('salary').value),
-                    admissionDate: document.getElementById('admissionDate').value,
-                    cnpj: document.getElementById('cnpj').value,
-                    companyAddress: {
-                        street: document.getElementById('companyStreet').value,
-                        number: document.getElementById('companyNumber').value,
-                        complement: document.getElementById('companyComplement').value || null,
-                        neighborhood: document.getElementById('companyNeighborhood').value,
-                        city: document.getElementById('companyCity').value,
-                        state: document.getElementById('companyState').value,
-                        country: document.getElementById('companyCountry').value,
-                        postalCode: document.getElementById('companyPostalCode').value,
-                    }
-                },
-                goods: Array.from(document.querySelectorAll('#goodsList .item')).map(item => ({
-                    description: item.querySelector('[name="goodsType"]').value,
-                    value: parseFloat(item.querySelector('[name="goodsValue"]').value),
-                })),
-                references: Array.from(document.querySelectorAll('#referencesList .item')).map(item => ({
-                    name: item.querySelector('[name="referenceName"]').value,
-                    phone: item.querySelector('[name="referencePhone"]').value,
-                    relationship: item.querySelector('[name="relationship"]').value,
-                })),
-            };
-
-            console.log(tenantData)
-            try {
-                const response = await fetch('http://localhost:8080/api/tenant', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(tenantData),
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    console.log('Dados enviados com sucesso:', result);
-                    alert('Formulário enviado com sucesso!');
-                } else {
-                    const error = await response.text();
-                    console.error('Erro ao enviar o formulário:', error);
-                    alert('Ocorreu um erro ao enviar o formulário.');
-                }
-            } catch (err) {
-                console.error('Erro inesperado:', err);
-                alert('Erro inesperado ao enviar o formulário.');
+        function submitForm() {
+            const form = document.getElementById('tenantForm');
+            if (form.checkValidity()) {
+                alert('Formulário enviado com sucesso!');
+            } else {
+                alert('Por favor, preencha todos os campos obrigatórios.');
             }
         }
     </script>
