--- a/src/pages/add-property.html
+++ b/src/pages/add-property.html
@@ -32,7 +32,8 @@
             font-weight: bold;
         }
 
-        input, select {
+        input,
+        select {
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
@@ -112,6 +113,9 @@
 
         <!-- Endereço -->
         <div class="section-title">Endereço</div>
+        <label for="postalCode">CEP</label>
+        <input type="text" id="postalCode" placeholder="CEP" required onblur="fetchAddress('postalCode')">
+
         <label for="street">Rua</label>
         <input type="text" id="street" placeholder="Rua" required>
 
@@ -133,14 +137,12 @@
         <label for="country">País</label>
         <input type="text" id="country" placeholder="País" required>
 
-        <label for="postalCode">CEP</label>
-        <input type="text" id="postalCode" placeholder="CEP" required>
-
         <!-- Proprietário -->
         <div class="section-title">Proprietário</div>
 
         <label for="cpf">CPF</label>
-        <input type="text" id="cpf" placeholder="CPF do proprietário" required>
+        <input type="text" id="cpf" placeholder="CPF do proprietário" required onblur="validateCPF()">
+
 
         <label for="ownerName">Nome</label>
         <input type="text" id="ownerName" placeholder="Nome do proprietário" required>
@@ -177,8 +179,30 @@
             }
         }
 
+        async function fetchAddress(prefix) {
+            const cep = document.getElementById(prefix).value.replace(/\D/g, '');
+            if (cep.length !== 8) {
+                alert('CEP inválido!');
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+                if (!response.ok) throw new Error('Erro na consulta do CEP');
+                const data = await response.json();
+                if (data.erro) throw new Error('CEP não encontrado');
+
+                document.getElementById('street').value = data.logradouro || '';
+                document.getElementById('neighborhood').value = data.bairro || '';
+                document.getElementById('city').value = data.localidade || '';
+                document.getElementById('state').value = data.uf || '';
+            } catch (error) {
+                alert('Erro ao buscar endereço: ' + error.message);
+            }
+        }
+
         async function saveProperty(event) {
-            event.preventDefault(); // Evita o envio do formulário padrão
+            event.preventDefault();
 
             const propertyData = {
                 typeProperty: document.getElementById('typeProperty').value,
@@ -227,7 +251,54 @@
             }
         }
 
-        // Adiciona o evento de envio ao formulário
+        function validateCPF() {
+        const cpf = document.getElementById('cpf').value.replace(/\D/g, ''); // Remove caracteres não numéricos
+
+        if (cpf.length !== 11) {
+            alert('CPF inválido! Deve conter 11 dígitos.');
+            document.getElementById('cpf').focus();
+            return false;
+        }
+
+        if (/^(\d)\1{10}$/.test(cpf)) { // Verifica se todos os dígitos são iguais
+            alert('CPF inválido! Todos os dígitos iguais.');
+            document.getElementById('cpf').focus();
+            return false;
+        }
+
+        let sum = 0;
+        let remainder;
+
+        // Verifica o primeiro dígito verificador
+        for (let i = 1; i <= 9; i++) {
+            sum += parseInt(cpf.substring(i - 1, i)) * (11 - i);
+        }
+        remainder = (sum * 10) % 11;
+        if (remainder === 10 || remainder === 11) remainder = 0;
+        if (remainder !== parseInt(cpf.substring(9, 10))) {
+            alert('CPF inválido! Primeiro dígito verificador incorreto.');
+            document.getElementById('cpf').focus();
+            return false;
+        }
+
+        // Verifica o segundo dígito verificador
+        sum = 0;
+        for (let i = 1; i <= 10; i++) {
+            sum += parseInt(cpf.substring(i - 1, i)) * (12 - i);
+        }
+        remainder = (sum * 10) % 11;
+        if (remainder === 10 || remainder === 11) remainder = 0;
+        if (remainder !== parseInt(cpf.substring(10, 11))) {
+            alert('CPF inválido! Segundo dígito verificador incorreto.');
+            document.getElementById('cpf').focus();
+            return false;
+        }
+
+        // CPF válido
+        alert('CPF válido!');
+        return true;
+    }
+
         document.getElementById('propertyForm').addEventListener('submit', saveProperty);
     </script>
 </body>
